# spawningpool

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/hooks/: session-start.sh
.githooks/: pre-commit
app/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/e2e/: browser.ts  demo.spec.ts  screenshot-urls.sh  seed.ts  tauri-mock.ts
app/media/: spawningpool-demo.webm
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  test_support.rs  watch.rs
app/src-tauri/src/commands/: registry.rs
app/src/components/: EntityDetail.svelte  EntityDetail.test.ts  EntityList.svelte  EntityList.test.ts  Shell.svelte
app/src/lib/: api.test.ts  api.ts  stores.test.ts  stores.ts  types.ts
cli/: Cargo.toml  README.md
cli/src/: cli.rs  display.rs  log.rs  main.rs  main_tests.rs  store.rs
cli/src/commands/: chat.rs  converse.rs  define.rs  delete.rs  list.rs  mod.rs  run.rs  show.rs
cli/src/tui/: app.rs  app_tests.rs  mod.rs  mod_tests.rs  open.rs  open_tests.rs  render.rs  render_tests.rs
docs/: README.md  ask.md  channels.md  cli.md  configuration.md  data-flow.md  human-in-the-loop.md  onboarding.md  tools.md  trust-migration.md  workflow-dsl.md  workflow-logging-plan.md  workflow-logging.md
docs/examples/: showcase.spool
docs/examples/tools/: classify.sh  deploy.sh  healthcheck.sh
docs/superpowers/plans/: 2026-06-08-tauri-app-roadmap.md
docs/superpowers/specs/: 2026-06-08-tauri-user-flows-design.md
examples/workflows/: conversation.spool  converse.spool
gui/: Cargo.toml
gui/src/: lib.rs
gui/tests/: snapshot.rs
spawningpool/: Cargo.toml  README.md
spawningpool/src/: domain.rs  domain_tests.rs  lib.rs  log.rs  log_tests.rs  run.rs  run_tests.rs  script.rs  script_tests.rs  store.rs  store_tests.rs  taskfile.rs  tools.rs  tools_tests.rs  types.rs  types_tests.rs
spawningpool/src/ai/: catalog.rs  catalog_tests.rs  client.rs  message.rs  message_tests.rs  mod.rs  model.rs  model_tests.rs  provider.rs  provider_tests.rs  sse.rs  validation.rs  validation_tests.rs
spawningpool/src/ai/providers/: anthropic.rs  anthropic_tests.rs  mod.rs  openai.rs  openai_tests.rs
spawningpool/src/ai/providers/anthropic/: anthropic_tests.rs  mod.rs  request.rs  response.rs  stream.rs
spawningpool/src/ai/providers/openai/: mod.rs  openai_tests.rs  request.rs  response.rs  stream.rs
spawningpool/src/workflow/: ast.rs  check.rs  check_tests.rs  collector.rs  eval.rs  eval_tests.rs  mod.rs  mod_tests.rs  parse.rs  render.rs  render_tests.rs
spawningpool/src/workflow/parse/: lexer.rs  mod.rs  parse_tests.rs
spawningpool/tests/: ai_integration.rs  specialist_run.rs
