[package]
name = "spawningpool-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spawningpool"
path = "src/main.rs"

[dependencies]
spawningpool = { path = "../spawningpool" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.150"
