[package]
name = "spawningpool-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for spawningpool — create hyper-specific, 0-waste agents"
license = "MIT"
repository = "https://github.com/ivypuckett/spawningpool"
homepage = "https://github.com/ivypuckett/spawningpool"
documentation = "https://github.com/ivypuckett/spawningpool/tree/main/docs"
readme = "README.md"
keywords = ["ai", "llm", "agents", "cli", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "spawningpool"
path = "src/main.rs"

[dependencies]
spawningpool = { path = "../spawningpool", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.150"
futures = "0.3.32"
ratatui = "0.30.1"
