[package]
name = "spawningpool"
version = "0.1.0"
edition = "2021"
description = "Create hyper-specific, 0-waste agents"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
async-trait = "0.1.89"
serde_json = "1.0.150"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
async-stream = "0.3.6"
