[package]
name = "spawningpool"
version = "0.1.0"
edition = "2021"
description = "Create hyper-specific, 0-waste agents"
license = "MIT"
repository = "https://github.com/ivypuckett/spawningpool"
homepage = "https://github.com/ivypuckett/spawningpool"
documentation = "https://docs.rs/spawningpool"
readme = "README.md"
keywords = ["ai", "llm", "agents", "claude", "openai"]
categories = ["api-bindings", "development-tools", "asynchronous"]

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.89"
serde_json = "1.0.150"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
async-stream = "0.3.6"
jsonschema = { version = "0.46.5", default-features = false }
